<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_arrow_iv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_text_field"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/string_popup_fragment" />

    <TextView
        android:id="@+id/description_tv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/string_speak_status_message"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_placeholder"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="?colorPrimary"
        app:indicatorSize="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/send_audio_btn"
        app:layout_constraintEnd_toEndOf="@+id/send_audio_btn"
        app:layout_constraintStart_toStartOf="@+id/send_audio_btn"
        app:layout_constraintTop_toTopOf="@+id/send_audio_btn" />

    <Button
        android:id="@+id/send_audio_btn"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:text="@string/string_send_button_title"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>